--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sass/main.scss" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <title>3-column preview card component</title>
   </head>
   <body>
     <div id="root"></div>
